--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "icqparty/text-lang-correct",
+  "name": "serjazz/text-lang-correct",
   "description": "A short description of what your package does",
   "require": {
     "php": ">=5.3"
   },
   "autoload": {
         "psr-4": {
-            "Icqparty\\TextLangCorrect\\": ""
+            "Serjazz\\TextLangCorrect\\": ""
         }
     }
 }
